--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,8 @@
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx2G
+name = SwordSwap
+version = 0.0.1
+modid = swap
+baseGroup = mod.nital.swordswap
+mcVersion = 1.8.9
+
+loom.platform=forge
+org.gradle.jvmargs=-Xmx2g
